add tests fix Repository saves fix codeStyle